--- a/styles.css
+++ b/styles.css
@@ -20,12 +20,16 @@ body, html{
     height: 8%;
     font-size: 35px;
 }
+.footer{
+    height: 4%;
+}
 .content{
     height: 88%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-image: linear-gradient(to bottom right, blue, orange);
 
 }
 #game-board{
@@ -35,11 +39,11 @@ body, html{
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     gap: 8px;
-    background-color: black;
+    background-color: transparent;
 
 }
 #game-board div{
-    background-color: white;
+    background-color: rgb(0,0,0, 0.5);
     display:flex;
     justify-content: center;
     align-items: center;
@@ -49,4 +53,8 @@ body, html{
     -ms-user-select: none; /* IE 10 and IE 11 */
     user-select: none; /* Standard syntax */  
 
+}
+#game-board div div{
+    background-color:transparent;
+    color:white;
 }
