--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Roboto+Condensed:wght@700&display=swap');
 
 *{
     font-family: 'Roboto Condensed', sans-serif;
 }
+
 body, html{
     height: 100%;
     margin: 0;
@@ -23,6 +24,36 @@ body, html{
 .footer{
     height: 4%;
 }
+#wrapper{
+    height: 88%;
+    background-color: rgb(0,0,0, 0.5);
+    position:absolute;
+    width: 100%;
+    z-index: 1;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+#result{
+    color: white;
+    height: 10vmin;
+    width: 50vmin;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Fredoka One', cursive;
+    font-size: 8vmin;
+}
+#play-wrap{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 30vmin;
+    width: 50vmin;
+}
 .content{
     height: 88%;
     display: flex;
@@ -30,11 +61,35 @@ body, html{
     align-items: center;
     flex-direction: column;
     background-image: linear-gradient(to bottom right, blue, orange);
-
+}
+.select-button{
+    border:none;
+    background-color: transparent;
+    color: white;
+    height: 100%;
+    width: 50%;
+    font-family: 'Fredoka One', cursive;
+    font-size: 8vmin;
+    transition: all 0.3s;
+}
+.select-button:hover{
+    text-shadow: 5px 10px black;
+}
+.player-select{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s;
+}
+#order{
+    height: 0;
+    overflow: hidden;
 }
 #game-board{
-    height: 50vmin;
-    width: 50vmin;
+    height: 70vmin;
+    width: 70vmin;
     display:grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
@@ -44,6 +99,7 @@ body, html{
 }
 #game-board div{
     background-color: rgb(0,0,0, 0.5);
+    border-radius: 25px;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -54,7 +110,9 @@ body, html{
     user-select: none; /* Standard syntax */  
 
 }
+
 #game-board div div{
+    font-family: 'Fredoka One', cursive;
     background-color:transparent;
     color:white;
 }
